--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 							<div class="single-about-txt">
 								<h3>
 									I am currently a Sophomore at Swinburne university of Technology. 
-									My major is Computer Sciece specializing in Software Development.
+									My major is Computer Science specializing in Software Development.
 								</h3>
 								<p>
 								I am a dedicated individual with a passion for continuous growth and exploration. 
